@@ -83,6 +83,7 @@ namespace LinuxSampler {
         public:
             type_t       Type;         ///< Voice Type (bit field, a voice may have several types)
             int          MIDIKey;      ///< MIDI key number of the key that triggered the voice
+            uint8_t      MIDIVelocity; ///< MIDI velocity of the key that triggered the voice
             
             SignalUnitRack* const pSignalUnitRack;
 
